# laincoin-com

./: hardhat.config.js  package.json
.github/workflows/: test-deploy.yml
contracts/: laincoin.sol
gnosis/: .env  package-lock.json
gnosis/scripts/: deploy.js
icp/: .env  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
icp/src/declarations/laincoin-com-backend/: index.d.ts  index.js
icp/src/declarations/laincoin-com-frontend/: index.d.ts  index.js
icp/src/laincoin-com-backend/: Cargo.toml
icp/src/laincoin-com-frontend/: package.json
icp/src/laincoin-com-frontend/public/: global.css
icp/src/laincoin-com-frontend/src/layouts/: BaseLayout.astro
icp/src/laincoin-com-frontend/src/pages/: gnosis.astro  icp.astro  index.astro  scrt.astro
laincoin-com-online/: Cargo.toml  dfx.json  package-lock.json  package.json
laincoin-com-online/src/laincoin-com-frontend/: package-lock.json  package.json
laincoin-com-online/src/laincoin-com-frontend/src/components/: Header.tsx  ProposalList.tsx  VotePanel.tsx
laincoin-com-online/src/laincoin-com-frontend/src/styles/: global.css
laincoin-com-online/src/laincoin-com-online-backend/: Cargo.toml
laincoin-com-online/src/laincoin_com_online_frontend/src/components/: Header.css  VotePanel.css
laincoin-com-website/: Cargo.toml  README.md
laincoin_com_online/: dfx.json
laincoin_com_online/src/laincoin_com_online_backend/: Cargo.toml
laincoin_com_online/src/laincoin_com_online_frontend/: package-lock.json  package.json
scrt/: Cargo.toml  NOTICE  init.json
scrt/src/: contract.rs  msg.rs
(+3 files in other folders)
