[package]
name = "laincoin"
version = "0.1.0"
authors = ["admin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
schemars = "0.8.11"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
secret-toolkit = { version = "0.9.0", features = ["snip20", "permit", "utils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
cw-multi-test = "2.0.0"
